Add requirements file
This will make it easy to track if a security update need to
happen, because dependabot will notify me.

Thanks dependabot.

--- a/subunit2junit/Dockerfile
+++ b/subunit2junit/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:alpine
 
-RUN pip install -y junitxml python-subunit
+COPY requirements.txt /requirements.txt
+RUN pip install -r /requirements.txt
+
 WORKDIR /data
 CMD ["python", "-m", "http.server"]
