--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -16,3 +16,22 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: cd ${{ matrix.image }} && docker build . --file Dockerfile --tag ${{ matrix.image }}:$(date +%s)
+    - name: Log into GitHub Container Registry
+      # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
+      run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+    - name: Push image to GitHub Container Registry
+      run: |
+          VERSION=$(date +%s)
+          IMAGE_NAME=${{ matrix.image }}
+
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+        
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          docker tag $IMAGE_NAME:$VERSION $IMAGE_ID:$VERSION
+          docker tag $IMAGE_NAME:$VERSION $IMAGE_ID:latest
+          docker push $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:latest
