--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -15,13 +15,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: cd ${{ matrix.image }} && docker build . --file Dockerfile --tag ${{ matrix.image }}:$(date +%s)
+      run: cd ${{ matrix.image }} && docker build . --file Dockerfile --tag ${{ matrix.image }}:$(date +%Y%m%d)
     - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
       run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Push image to GitHub Container Registry
       run: |
-          VERSION=$(date +%s)
+          VERSION=$(date +%Y%m%d)
           IMAGE_NAME=${{ matrix.image }}
 
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}
