--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image Public publish
 
 on:
   push:
@@ -15,13 +15,13 @@ jobs:
       run: cd ${{ matrix.image }} && docker build . --file Dockerfile --tag ${{ matrix.image }}:$(date +%Y%m%d)
     - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
-      run: echo "${{ secrets.CR_PAT }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Push image to GitHub Container Registry
       run: |
           VERSION=$(date +%Y%m%d)
           IMAGE_NAME=${{ matrix.image }}
 
-          IMAGE_ID=docker.pkg.github.com/evrardjp/containers/${{ matrix.image }}
+          IMAGE_ID=ghcr.io/${{ github.actor }}/containers/${{ matrix.image }}
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
         
