--- a/.github/workflows/docker-images-testing.yml
+++ b/.github/workflows/docker-images-testing.yml
@@ -13,3 +13,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: cd ${{ matrix.image }} && docker build . --file Dockerfile --tag ${{ matrix.image }}:$(date +%Y%m%d)
+    - name: Show the built images
+      run: docker inspect --type image ${{ matrix.image }}:$(date +%Y%m%d)
